# vcmp-python-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  Cargo.toml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/actions/build-docker-image/: action.yml
.github/actions/build-libraries/: action.yml
.github/actions/download-libraries/: action.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: .build-and-upload.yml  build.yml  docker_build.yml  release.yml
.github/workflows/build-docker/: action.yml
.github/workflows/process-artifacts/: action.yml
__vcmp/: functions.pyi
c_src/: config.h  logger.h  main.cpp  main.h  meta.hpp  plugin.h  pymodule.h  update.h
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs  raw.rs
crates/core/: Cargo.toml
crates/core/src/: callbacks.rs  consts.rs  func.rs  functions.rs  lib.rs  logger.rs  pool.rs  update.rs  var.rs
crates/core/src/cfg/: cli_env.rs  mod.rs
crates/core/src/event/: abc.rs  mod.rs
crates/core/src/func/: player.rs  util.rs  vehicle.rs
crates/core/src/functions/: callbacks.rs  checkpoint.rs  environment.rs  keybind.rs  marker.rs  misc.rs  object.rs  pickup.rs  player.rs  server.rs  vehicle.rs
crates/core/src/logger/: format.rs
crates/core/src/py/: callbacks.rs  exceptions.rs  mod.rs  pool.rs  streams.rs  types.rs  util.rs
crates/core/src/py/events/: abc.rs  checkpoint.rs  custom.rs  mod.rs  object.rs  pickup.rs  player.rs  server.rs  vehicle.rs
crates/core/src/squirrel/: mod.rs
crates/npc_bindings/: Cargo.toml
crates/npc_bindings/src/: exports.h  exports.rs  lib.rs  raw.rs
crates/squirrel_ffi/: Cargo.toml
crates/squirrel_ffi/src/: SQMain.cpp  SQMain.h  error.rs  lib.rs  raw.rs  sq.rs
crates/squirrel_ffi/src/sq_ffi/: mod.rs  raw.rs
crates/squirrel_ffi_macros/: Cargo.toml
crates/squirrel_ffi_macros/src/: lib.rs
crates/vcmp_bindings/: Cargo.toml
crates/vcmp_bindings/src/: error.rs  func.rs  lib.rs  options.rs  plugin_info.rs  raw.rs  setting.rs  states.rs  types.rs  util_struct.rs  utils.rs  v21.h
crates/vcmp_bindings/src/events/: checkpoint.rs  mod.rs  object.rs  pickup.rs  player.rs  server.rs  vehicle.rs
crates/vcmp_bindings/src/func/: admin.rs  checkpoint.rs  environment.rs  keybind.rs  marker.rs  misc.rs  network.rs  object.rs  pickup.rs  player.rs  plugin.rs  server.rs  template.rs  vehicle.rs  weapon.rs
crates/vcmp_bindings/vcmp/: __init__.pyi  streams.pyi  util.pyi
examples/: handle_event.py  spawn_vehicle.py
examples/preloader/: main.py
examples/streams/: clientside.nut  serverside.py
rs_src/: Cargo.toml  lib.rs
rs_src/bindings/: mod.rs  raw.rs
rs_src/src/: lib.rs
rs_src/src/bindings/: mod.rs  raw.rs
scripts/: build-and-run.py  count_ref.py  create-py-file.py  download.py  find_unref.py  fmt_all.py  gen_bindgen-npc.py  gen_bindgen.py  gen_bindgen_sq_ffi.py  list_attr.py
src/: EventHandler.h  config.h  encoding.h  logger.h  main.cpp  main.h  meta.hpp  pymodule.h  update.h
src/__vcmp/: functions.pyi
src/vcmp/: __export.py  __init__.py  __init__.pyi  callback.py  callback.pyi  callbacks.py  callbacks.pyi  common.py  enums.py  exceptions.pyi  instance.py  instance.pyi  logger.py  pool.py  pool.pyi  streams.py  streams.pyi  types.py  types.pyi  util.py  util.pyi  vec.py
src/vcmp/events/: __init__.py  __init__.pyi  abc.py  abc.pyi  checkpoint.py  checkpoint.pyi  custom.py  custom.pyi  entity.py  object.py  object.pyi  pickup.py  pickup.pyi  player.py  player.pyi  plugin.py  server.py  server.pyi  vehicle.py  vehicle.pyi
src/vcmp/functions/: __init__.py  __init__.pyi  admin.py  checkpoint.py  checkpoint.pyi  environment.py  environment.pyi  keybind.py  keybind.pyi  marker.py  marker.pyi  misc.py  misc.pyi  object.py  object.pyi  pickup.py  pickup.pyi  player.py  player.pyi  plugin.py  server.py  server.pyi  sound.py  vehicle.py  vehicle.pyi  weapon.py
vcmp/: __callbacks.py  __init__.py  __runner.py  __utils.py  callbacks.py  common.py  constant.py  enums.py  exceptions.py  instance.py  logger.py  util.py  vec.py
vcmp/__abc/: __init__.py
vcmp/events/: __init__.py  abc.py  checkpoint.py  entity.py  object.py  pickup.py  player.py  plugin.py  server.py  vehicle.py
vcmp/extend/: stream.nut
vcmp/functions/: admin.py  checkpoint.py  common.py  environment.py  keybind.py  message.py  misc.py  object.py  pickup.py  plugin.py  server.py  vehicle.py  world.py
