[project]
name = "vcmp-python-plugin"
version = "2.0.0-1"
description = "Python for VC:MP Server Plugin"
authors = [
    {name = "shenjack", email = "3695888@qq.com"},
    {name = "tianxiu2b2t", email = "atianxiua@163.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true