[package]
name = "vcmp-plugin-rs"
version = "0.1.0"
edition = "2024"
authors = [
    "shenjack <3695888@qq.com>",
    "tianxiu2b2t <administrator@ttb-network.top>",
]
repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"

[dependencies]
arc-bytes = "0.3.5"
chrono = "0.4.41"
pyo3 = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "fmt", "ansi"] }
vcmp_bindings = { path = "../vcmp_bindings" }

[lib]
crate-type = ["cdylib"]
