[package]
name = "vcmp-plugin-rs"
version = "0.1.0"
edition = "2024"
authors = [
    "shenjack <3695888@qq.com>",
    "tianxiu2b2t <administrator@ttb-network.top>",
]
repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"

[dependencies]
pyo3 = { version = "0.25.1", features = ["py-clone"]}
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "fmt", "ansi"] }
ureq = "3.0.12"
vcmp_bindings = { git = "https://github.com/tianxiu2b2t/vcmp_bindings" }

[lib]
crate-type = ["cdylib"]
